Bug 109289 - Setting gridline color in options for Calc does not have effect
Summary: Setting gridline color in options for Calc does not have effect
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.3.4.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0 target:5.4.1 target:5.3.6
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Options-Dialog Sheet-Gridlines
  Show dependency treegraph
 
Reported: 2017-07-23 19:17 UTC by David Strozzi
Modified: 2017-07-27 20:32 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
sample of sheet with red gridline (7.18 KB, application/vnd.oasis.opendocument.spreadsheet)
2017-07-24 10:16 UTC, Xavier Van Wijmeersch
Details
screenshot of tools option libreoffice calc (194.20 KB, image/png)
2017-07-24 10:18 UTC, Xavier Van Wijmeersch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Strozzi 2017-07-23 19:17:05 UTC
Description:
When I go to Tools -> Options -> LibreOffice Calc -> View, and change 'color' under 'visual aids', it does not take effect.  It is black to start, whatever I set it to, it stays black.  If I click OK and come back, black again.  And always appears black in the actual spreadsheet.  I even removed my user profile, same thing.

Steps to Reproduce:
1. Tools -> Options -> LibreOffice Calc -> View
2. change 'color' under 'visual aids' to anything besides black
3. Click OK
Nothing changes on screen, repeat step 1 says black again.

Actual Results:  
Gridlines black, setting black.

Expected Results:
Gridlnes on screen change color, setting remembers color I selected.


Reproducible: Always

User Profile Reset: Yes - no effect

Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: SpreadsheetDocument
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: yes
Builds ID: LibreOffice 5.3.4.2


User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Cor Nouws 2017-07-23 20:54:30 UTC
Thanks David,
Conform in Version: 6.0.0.0.alpha0+
Build ID: e0bafa78e3ad0df397d78cd65ad19bd5b07dc5f2
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-07-20_22:42:49
Locale: nl-NL (nl_NL.UTF-8); Calc: group
Comment 2 Cor Nouws 2017-07-23 20:56:22 UTC
After closing Options dialog and opening again, the chosen color is no longer selected. Probably be caused by implementation of the new color themes (side note)
Comment 3 Xavier Van Wijmeersch 2017-07-24 10:15:59 UTC
It can be done, but its a bit ?weird? 

Steps to Reproduce:
1. Tools -> Options -> LibreOffice Calc -> View
2. change 'color' under 'visual aids' to anything besides black
3. change 'gridlines' to 'show on colored cells'
4. Click OK and save. Reopen and the red color is still there
And if you want it set back to 'gray gridlines' use the same steps

Version: 5.3.4.2
Build ID: SlackBuild for 5.3.4 by Eric Hameleers
CPU Threads: 8; OS Version: Linux 4.9; UI Render: default; VCL: kde4; Layout Engine: new; 
Locale: nl-BE (en_US.UTF-8); Calc: group
Comment 4 Xavier Van Wijmeersch 2017-07-24 10:16:56 UTC
Created attachment 134811 [details]
sample of sheet with red gridline
Comment 5 Xavier Van Wijmeersch 2017-07-24 10:18:55 UTC
Created attachment 134812 [details]
screenshot of tools option libreoffice calc
Comment 6 raal 2017-07-26 17:43:54 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara  ; Could you possibly take a look at this one?
Thanks

author	Caolán McNamara <caolanm@redhat.com>	2016-11-05 20:28:27 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2016-11-07 21:04:50 (GMT)
commit 64a708cba9b954afe3331f63c58218eb53b3d0ce (patch)
tree ddc1bea3b63f32a1c6d377c1d1dd7aee0803fb70
parent f01c49c4a89ecad2376fd0023625186e5cac642e (diff)
Revert "Reverts a commit series that cripple windows ci."
with addition of...

- svxlo-SvxColorListBox
+ svxcorelo-SvxColorListBox

This reverts commit db380aab1063e8a5e40111c40ee9f7921aa82601.
Comment 7 Commit Notification 2017-07-27 12:33:55 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=247607727986df0fd0fef198459eb6646e056ea3

Related: tdf#109289 move PushButton::IsValueChangedFromSaved to consumer

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2017-07-27 12:34:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=39fd7e97c253153a10161ef3694b64e90e65e80a

Resolves: tdf#109289 add SvxColorListBox::IsValueChangedFromSaved

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2017-07-27 20:31:56 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8eb05127e8ffcbe4a6bd6eb10b073d015cea34aa&h=libreoffice-5-4

Resolves: tdf#109289 add SvxColorListBox::IsValueChangedFromSaved

It will be available in 5.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2017-07-27 20:32:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d747a00f550cc8556e29b29b08c57f84afb4078f&h=libreoffice-5-3

Resolves: tdf#109289 add SvxColorListBox::IsValueChangedFromSaved

It will be available in 5.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.